update build.gradle
- refactoring
- ref #5